5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1633_2925.log
== SUBMITION (2019-04-02 18:31:43) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= float(qntd_de_ind_da_nv_pop**2)
-- EXECUTION TIME:
0.196752
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:

-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:31:43) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= float(qntd_de_ind_da_nv_pop**2)
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:31:45) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= float(qntd_de_ind_da_nv_pop**2)
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:05) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= (float(qntd_de_ind_da_nv_pop**2))
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:32:05) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= (float(qntd_de_ind_da_nv_pop**2))
-- EXECUTION TIME:
0.137465
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:

-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:06) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= (float(qntd_de_ind_da_nv_pop**2))
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:06) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= (float(qntd_de_ind_da_nv_pop**2))
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:32:07) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= (float(qntd_de_ind_da_nv_pop**2))
-- EXECUTION TIME:
0.218133
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:

-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:

-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:53) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= round(qntd_de_ind_da_nv_pop**2)
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:14) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= round(2**2)
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:15) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= round(2**2)
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:16) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= round(2**2)
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:16) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= round(2**2)
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:16) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= round(2**2)
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:17) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= round(2**2)
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:17) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= round(2**2)
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:33:24) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= print(2**2)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:33:27) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= print(2**2)
-- EXECUTION TIME:
0.166716
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
4
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
4
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:23) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= print(qntd_de_ind_da_nv_pop**2)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:34:25) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= print(qntd_de_ind_da_nv_pop**2)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:37:00) 
-- CODE:
qntd_de_ind_da_nv_pop= 5
qntd_de_ind_da_nv_ger= print(qntd_de_ind_da_nv_pop**5)

-- OUTPUT:
3125
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:37:08) 
-- CODE:
qntd_de_ind_da_nv_pop= 2
qntd_de_ind_da_nv_ger= print(qntd_de_ind_da_nv_pop**5)

-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:54) 
-- CODE:
po1=float(input("digite o total da pop1"))
qntd_de_ind_da_nv_ger= print(pop1**2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    qntd_de_ind_da_nv_ger= print(pop1**2)
NameError: name 'pop1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:01) 
-- CODE:
po1=float(input("digite o total da pop1"))
pop2=print(2**pop1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pop2=print(2**pop1)
NameError: name 'pop1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:18) 
-- CODE:
po1=float(input("digite o total da pop1"))
pop2=print(round(2**pop1))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pop2=print(round(2**pop1))
NameError: name 'pop1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:37) 
-- CODE:
pop1=float(input("digite o total da pop1"))
pop2=print(round(2**pop1))

-- OUTPUT:
512
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:44:43) 
-- CODE:
pop1=float(input("digite o total da pop1"))
pop2=print(round(2**pop1))

-- EXECUTION TIME:
0.131763
-- TEST CASE 1:
---- input:
9
---- correct output:
512
---- user output:
512
-- TEST CASE 2:
---- input:
13
---- correct output:
8192
---- user output:
8192
-- TEST CASE 3:
---- input:
19
---- correct output:
524288
---- user output:
524288
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
